--- a/index.html
+++ b/index.html
@@ -6,21 +6,42 @@
     </head>
     <body background="/Projeto Unes/images/fundo.png">
         
-        <table  width="1000" align="center">
+        <table width="900" align="center">
             <tr>
-                <td><img src="/Projeto Unes/images/logo.png" alt="Logo da Unes"></td>
-                <td><a href="/Projeto Unes/index.html">Home | </a><a href="/Projeto Unes/About.html">Quem somos nós | </a><a href="/Projeto Unes/Contato.html">Contato</a></td>
+                <td height="80px"><img src="/Projeto Unes/images/logo.png" alt="Logo da Unes"></td>
+                <td align="right">
+                    <a href="/Projeto Unes/index.html">Home</a> |
+                    <a href="/Projeto Unes/About.html">Quem somos nós</a> |
+                    <a href="/Projeto Unes/Contato.html">Contato</a>
+                </td>
+            </tr>
+            <tr>
+                <td colspan="2">
+                    <img src="/Projeto Unes/images/capa.png" alt="Capa da universidade">
+                </td>
+            </tr>
+            <tr>
+                <td align="center" colspan="2">
+                    <h2>Sobre nós</h2>
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus, minus. Praesentium accusantium vero doloremque,
+                        quisquam mollitia doloribus. Quisquam debitis totam, maxime laborum cupiditate recusandae doloribus facere autem aspernatur.
+                        Doloremque, facere! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate repellendus officiis adipisci,
+                        officia autem aut. Nemo ab dicta repellat aut ea? Nihil quaerat repudiandae itaque. Maxime temporibus doloremque veniam eius.
+                    </p>
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus, minus. Praesentium accusantium vero doloremque,
+                        quisquam mollitia doloribus. Quisquam debitis totam, maxime laborum cupiditate recusandae doloribus facere autem aspernatur.
+                        Doloremque, facere! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate repellendus officiis adipisci,
+                        officia autem aut. Nemo ab dicta repellat aut ea? Nihil quaerat repudiandae itaque. Maxime temporibus doloremque veniam eius.
+                    </p>
+                </td>
+            </tr>
+            <tr>
+                <td align="center" colspan="2">
+                    <h4>Todos diretos reservados</h4>
+                </td>
             </tr>
         </table>
-
-        <img align="center" src="/Projeto Unes/images/capa.png" alt="Capa da universidade">
-
-        <h2>Sobre nós</h2>
-        <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus, minus. Praesentium accusantium vero doloremque,
-            quisquam mollitia doloribus. Quisquam debitis totam, maxime laborum cupiditate recusandae doloribus facere autem aspernatur.
-            Doloremque, facere! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate repellendus officiis adipisci,
-            officia autem aut. Nemo ab dicta repellat aut ea? Nihil quaerat repudiandae itaque. Maxime temporibus doloremque veniam eius.
-        </p>
     </body>
 </html>
