--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
         <title>UNES</title>
         <meta charset="utf-8">
     </head>
-    <body background="/Projeto Unes/images/fundo.png">
+    <body background="images/fundo2.png">
         
         <table width="900" align="center">
             <tr>
-                <td height="80px"><img src="/Projeto Unes/images/logo.png" alt="Logo da Unes"></td>
+                <td height="80px"><img src="images/logo.png" alt="Logo da Unes"></td>
                 <td align="right">
-                    <a href="/Projeto Unes/index.html">Home</a> |
-                    <a href="/Projeto Unes/About.html">Quem somos nós</a> |
-                    <a href="/Projeto Unes/Contato.html">Contato</a>
+                    <a href="index.html">Home</a> |
+                    <a href="About.html">Quem somos nós</a> |
+                    <a href="Contato.html">Contato</a>
                 </td>
             </tr>
             <tr>
                 <td colspan="2">
-                    <img src="/Projeto Unes/images/capa.png" alt="Capa da universidade">
+                    <img src="images/capa.png" alt="Capa da universidade">
                 </td>
             </tr>
             <tr>
