Atualizações de pastas

--- a/Projeto Unes/About.html
+++ b/Projeto Unes/About.html
@@ -4,15 +4,14 @@
         <title>UNES</title>
         <meta charset="utf-8">
     </head>
-    <body background="images/fundo2.png">
-        
+    <body background="/Projeto Unes/images/fundo2.png">
         <table width="900" align="center">
             <tr>
-                <td height="80px"><img src="images/logo.png" alt="Logo da Unes"></td>
+                <td height="80px"><img src="/Projeto Unes/images/logo.png" alt="Logo da Unes"></td>
                 <td align="right">
-                    <a href="index.html">Home</a> |
-                    <a href="About.html">Quem somos nós</a> |
-                    <a href="Contato.html">Contato</a>
+                    <a href="/Projeto Unes/index.html">Home</a> |
+                    <a href="/Projeto Unes/About.html">Quem somos nós</a> |
+                    <a href="/Projeto Unes/Contato.html">Contato</a>
                 </td>
             </tr>
             <tr>
